@@ -1,6 +1,7 @@
 23/06/09 Julien Dutheil
 * Compatibility update: now contianers returns references instead of pointers.
 * TreeTemplate now uses pointers and not references.
+* Added dropTip function in TreeTemplateTools.
 
 10/06/09 -*- Version 1.8.0 -*-
 
